--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <h1 align="center">ALICE</h1>
           
-          <p>Hi~我是Alice，畢業於亞洲大學生醫系，具有程式的基礎，目前從事前端工程師，興趣是旅行和攝影。</p>
-          <p>在大學時學過程式設計，一開始初學的語言為java，後來開始學習網頁，先是前端的HTML和CSS，使用Bootstrap的模板設計網頁，之後慢慢接觸到javacript和後端php.mysql等。</p>
-          <p>目前正在不斷精進自己的網頁設計能力，學習了photoshop.illustrator操作，希望能精進更多的ui技能，未來想從事網頁設計相關工作。</p>
+          <p>我是一名前端開發工程師，專注於打造流暢且高效的使用者體驗，擅長運用 HTML、CSS、JavaScript 及相關框架開發現代化的網頁應用。我熱衷於技術學習，關注最新的前端趨勢與最佳實踐，並樂於與團隊合作，共同打造優質的產品。</p>
+          <p>除了前端技術，我對數位內容與品牌經營有濃厚興趣，正在探索如何將技術與創意結合，提升使用者體驗與產品價值。目前，我正在尋找資訊類相關的工作機會，期待與有創新精神的團隊合作，持續精進技術並創造更多可能性。</p>
+          <p>歡迎與我交流，一起探討技術與產品的無限可能！</p>
         </div>
       </div>
     </div>
